[tool.poetry]
name = "bot_detection"
version = "0.1.0"
description = ""
authors = ["Anton <Kondrahin210@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
pandas = "^1.5.1"
notebook = "^6.5.1"
seaborn = "^0.12.1"
matplotlib = "^3.5.3"
sklearn = "^0.0"
jinja2 = "3.1.1"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
